--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -1,16 +1,22 @@
 .resume-component {
     text-align: center;
 
-    .work-history {
-        i {
-            font-size: 30px;
-        }
+    h6 {
+        font-size: 12px;
+    }
+
+    h5 {
+        text-decoration: underline;
+    }
+
+    i {
+        font-size: 32px;
     }
 
     .event:before {
         content: "";
         position: absolute;
-        top: 10px;
+        top: 20px;
         bottom: -10px;
         left: 12px;
         width: 4px;
@@ -42,4 +48,20 @@
         }
     }
 
+    .skills-container {
+        .progress {
+            width: 100%;
+        }
+        .progress-bar {
+            background-color: grey;
+        }
+    }
+
+}
+
+::ng-deep {
+    i {
+        font-size: 28px !important;
+        min-width: 35px;
+    }
 }
