--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,6 +115,16 @@
       </div>
     </div>
   </div>
+
+  <div class="app-component__stack pt-3 pb-3">
+    <h1> Stack Used</h1>
+    <div class="stack-container d-flex flex-wrap justify-content-around align-items-center">
+      <div class="col-4 col-sm-3 p2" *ngFor="let image of images">
+        <img class="" [src]="image" alt="">
+      </div>
+    </div>
+  </div>
+
   <div class="app-component__footer p-3 d-flex flex-column justify-content-between align-items-lg-stretch">
     <div
       class="pl-2 pr-2 d-flex flex-column flex-sm-row justify-content-center align-items-center justify-content-sm-between">
