--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -119,27 +119,32 @@
   <div class="app-component__stack pt-3 pb-3">
     <h1> Stack Used</h1>
     <div class="stack-container d-flex flex-wrap justify-content-around align-items-center">
-      <div class="col-4 col-sm-3 p2" *ngFor="let image of images">
+      <div class="col-4 col-sm-3 p-4" *ngFor="let image of images">
         <img class="" [src]="image" alt="">
       </div>
     </div>
   </div>
 
-  <div class="app-component__footer p-3 d-flex flex-column justify-content-between align-items-lg-stretch">
+  <div class="app-component__footer p-0 p-sm-3 pt-2 pb-2 d-flex flex-column justify-content-between align-items-lg-stretch">
     <div
       class="pl-2 pr-2 d-flex flex-column flex-sm-row justify-content-center align-items-center justify-content-sm-between">
       <div class="company col-6 aling-items-start">
-        <a class="btn btn-link font-weight-bold" href="https://eminds.ro"> E-MINDS </a>
+        <a class="btn btn-link font-weight-bold" href="https://eminds.ro"> [M.IORDACHE] </a>
       </div>
 
-      <div class="contact-details col-12 col-sm-6 d-flex align-items-sm-start justify-content-between">
-        <p class="col-4 p-0">
+      <div class="contact-details col-12 col-sm-6 d-flex align-items-sm-start justify-content-start">
+        <p class="col-4 pr-2">
           Contact:
         </p>
         <div class="d-flex p-0 col-8 flex-column justify-content-center align-items-start ">
           <a class="mb-0">
-            iordache.mihaialexandru@gmail.com <i class="fas fa-envelope"></i></a>
-          <a>+40742696988 <i class="fas fa-phone"></i> </a>
+            iordache.mihaialexandru@gmail.com
+            <i class="fas fa-envelope"></i>
+          </a>
+          <a>
+            +40742696988
+            <i class="fas fa-phone"></i>
+          </a>
         </div>
       </div>
 
